  * fixed label on less block (use &lt;)
  * fixed infinite loop problem when searching for expandables
  * fixed more issues with caching
  * reload media thumbnails on load
  * added collapsible stacks
  * added copy/paste of stacks
  * rename action blocks when loading projects
  * added palette entries when encountering new storein blocks
  * allow dragging from collapse button
  * added forever block
  * added 'stop action' (AKA break)
  * fixed several format issues with saved SVG
  * saving SVG thumbnail to server along with project file
  * seeding SVG with bg color on run
  * failed experimenting with zoom and scroll settings
  * fixed rounding bug in repeat code
  * fixed menu tearing issues
  * fixed placement of new items in Blocks menu
  * improved highlight logic
  * fixed labels on collapsed stacks
  * better compartmentalization of block code
   (using a dictionary for the code associated with each "advanced" block)
  * fixed scaling issues with SVG output
  * implemented selectable menu of samples (for server version)
  * check to see if running from a server or a local copy
  * implemented selectable menu of samples (for local filesystem version)
  * added paging to samples viewer
  * fixed crash due to uncaching something that hasn't been cached
    (2arg adjustable blocks)
  * hide stop button when running from server
  * major overhaul of SVG generation: async
    (Works with Firefox, Safari, Chrome)
  * added paging to samples downloads
  * added Easeljs caching throughout

TODO:
  * use busy cursor where approporate
  * use snap to pixels
  * user defined blocks
  * more sensors
  * implement if-then-else, while, until
  * implement and or not
  * keyboard short cuts

BUGS:
  * don't save full-sized bitmap to session
  * fix canvas sizing, resizing
  * cannot open same file twice in a row (no change event?)
  * occasional misplaced DOM textarea
  * occasional misplaced highlight filler
  * occasional bad init
  * fill broken in save to SVG